--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "homepage": "https://Roman-Huminilovych.github.io/goit-js-hw-09",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url/goit-js-hw-09/"
+    "build": "parcel build src/*.html --public-url /goit-js-hw-09/"
   },
   "repository": {
     "type": "git",
@@ -18,10 +18,9 @@
     "url": "https://github.com/goitacademy/parcel-project-template/issues"
   },
   "dependencies": {
-    "@vimeo/player": "^2.17.1",
-    "lodash.throttle": "^4.1.1",
+    "flatpickr": "^4.6.13",
     "modern-normalize": "^1.1.0",
-    "simplelightbox": "^2.10.3"
+    "notiflix": "^3.2.5"
   },
   "devDependencies": {
     "@parcel/transformer-sass": "^2.6.0",
